GNOME Bugzilla – Bug 749727
Impossible to select the text in a note with the mouse
Last modified: 2015-12-02 15:20:04 UTC
Steps to reproduce: - open a pdf document - create a note a insert some text - try to select the text with the mouse => the note is moved and the text is not selected The expected behavior would be to select the text. The note should be moved only by dragging the header of the note
Created attachment 308416 [details] [review] Selecting text inside annotations Hello! The problem was caused by the fact that GtkWindow was getting all the button-press events. The patch removes this setting and adds an event box to the title bar which takes the button-press and calls the function to move the window. This way, the text view behaves as expected, and the window is only moved via the title bar.
Comment on attachment 308416 [details] [review] Selecting text inside annotations Cool!, pushed, thank you.