Selecting text from annotation notes

Clicking and dragging the mouse inside an
annotation note should select the text. Clicking
and dragging the mouse on the title bar should
move the window.

This commit fixes
https://bugzilla.gnome.org/show_bug.cgi?id=749727